lexparse/code/SimpleLangParser.java
// Generated from SimpleLang.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROJECT=1, BREAK=2, CLASS=3, INTERFACE=4, ENUM=5, ELSE=6, CONST=7, IF=8, 
		NEW=9, PRINT=10, READ=11, RETURN=12, VOID=13, FOR=14, EXTENDS=15, CONTINUE=16, 
		IMPLEMENTS=17, IDENT=18, NUMCONST=19, CHARCONST=20, BOOLEANCONST=21, PRINTABLECHAR=22, 
		LETTER=23, DIGIT=24, WS=25, PLUS=26, MINUS=27, MUL=28, DIV=29, MOD=30, 
		EQ=31, NOTEQ=32, GREATER=33, GEQ=34, LESS=35, LEQ=36, LOGICAND=37, LOGICOR=38, 
		ASS=39, INCR=40, DECR=41, SEMICOLON=42, COMMA=43, PERIOD=44, LPAREN=45, 
		RPAREN=46, LSQ=47, RSQ=48, LCUR=49, RCUR=50, COMMENT=51;
	public static final int
		RULE_project = 0, RULE_constdecl = 1, RULE_enumdecl = 2, RULE_vardecl = 3, 
		RULE_classdecl = 4, RULE_interfacedecl = 5, RULE_interfacemethoddecl = 6, 
		RULE_methoddecl = 7, RULE_formpars = 8, RULE_type = 9, RULE_statement = 10, 
		RULE_designatorstatement = 11, RULE_actpars = 12, RULE_condition = 13, 
		RULE_condterm = 14, RULE_condfact = 15, RULE_expr = 16, RULE_term = 17, 
		RULE_factor = 18, RULE_designator = 19, RULE_assignop = 20, RULE_relop = 21, 
		RULE_addop = 22, RULE_mulop = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"project", "constdecl", "enumdecl", "vardecl", "classdecl", "interfacedecl", 
			"interfacemethoddecl", "methoddecl", "formpars", "type", "statement", 
			"designatorstatement", "actpars", "condition", "condterm", "condfact", 
			"expr", "term", "factor", "designator", "assignop", "relop", "addop", 
			"mulop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'project'", "'break'", "'class'", "'interface'", "'enum'", "'else'", 
			"'const'", "'if'", "'new'", "'print'", "'read'", "'return'", "'void'", 
			"'for'", "'extends'", "'continue'", "'implements'", null, null, null, 
			null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
			"'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", "'='", "'++'", 
			"'--'", "';'", "','", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROJECT", "BREAK", "CLASS", "INTERFACE", "ENUM", "ELSE", "CONST", 
			"IF", "NEW", "PRINT", "READ", "RETURN", "VOID", "FOR", "EXTENDS", "CONTINUE", 
			"IMPLEMENTS", "IDENT", "NUMCONST", "CHARCONST", "BOOLEANCONST", "PRINTABLECHAR", 
			"LETTER", "DIGIT", "WS", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EQ", 
			"NOTEQ", "GREATER", "GEQ", "LESS", "LEQ", "LOGICAND", "LOGICOR", "ASS", 
			"INCR", "DECR", "SEMICOLON", "COMMA", "PERIOD", "LPAREN", "RPAREN", "LSQ", 
			"RSQ", "LCUR", "RCUR", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProjectContext extends ParserRuleContext {
		public TerminalNode PROJECT() { return getToken(SimpleLangParser.PROJECT, 0); }
		public TerminalNode IDENT() { return getToken(SimpleLangParser.IDENT, 0); }
		public TerminalNode LCUR() { return getToken(SimpleLangParser.LCUR, 0); }
		public TerminalNode RCUR() { return getToken(SimpleLangParser.RCUR, 0); }
		public TerminalNode EOF() { return getToken(SimpleLangParser.EOF, 0); }
		public List<ConstdeclContext> constdecl() {
			return getRuleContexts(ConstdeclContext.class);
		}
		public ConstdeclContext constdecl(int i) {
			return getRuleContext(ConstdeclContext.class,i);
		}
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<ClassdeclContext> classdecl() {
			return getRuleContexts(ClassdeclContext.class);
		}
		public ClassdeclContext classdecl(int i) {
			return getRuleContext(ClassdeclContext.class,i);
		}
		public List<EnumdeclContext> enumdecl() {
			return getRuleContexts(EnumdeclContext.class);
		}
		public EnumdeclContext enumdecl(int i) {
			return getRuleContext(EnumdeclContext.class,i);
		}
		public List<InterfacedeclContext> interfacedecl() {
			return getRuleContexts(InterfacedeclContext.class);
		}
		public InterfacedeclContext interfacedecl(int i) {
			return getRuleContext(InterfacedeclContext.class,i);
		}
		public List<MethoddeclContext> methoddecl() {
			return getRuleContexts(MethoddeclContext.class);
		}
		public MethoddeclContext methoddecl(int i) {
			return getRuleContext(MethoddeclContext.class,i);
		}
		public ProjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_project; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).enterProject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).exitProject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLangVisitor ) return ((SimpleLangVisitor<? extends T>)visitor).visitProject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectContext project() throws RecognitionException {
		ProjectContext _localctx = new ProjectContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_project);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(PROJECT);
			setState(49);
			match(IDENT);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << INTERFACE) | (1L << ENUM) | (1L << CONST) | (1L << IDENT))) != 0)) {
				{
				setState(55);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONST:
					{
					setState(50);
					constdecl();
					}
					break;
				case IDENT:
					{
					setState(51);
					vardecl();
					}
					break;
				case CLASS:
					{
					setState(52);
					classdecl();
					}
					break;
				case ENUM:
					{
					setState(53);
					enumdecl();
					}
					break;
				case INTERFACE:
					{
					setState(54);
					interfacedecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(LCUR);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VOID || _la==IDENT) {
				{
				{
				setState(61);
				methoddecl();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(RCUR);
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstdeclContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(SimpleLangParser.CONST, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> IDENT() { return getTokens(SimpleLangParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(SimpleLangParser.IDENT, i);
		}
		public List<TerminalNode> ASS() { return getTokens(SimpleLangParser.ASS); }
		public TerminalNode ASS(int i) {
			return getToken(SimpleLangParser.ASS, i);
		}
		public TerminalNode SEMICOLON() { return getToken(SimpleLangParser.SEMICOLON, 0); }
		public List<TerminalNode> NUMCONST() { return getTokens(SimpleLangParser.NUMCONST); }
		public TerminalNode NUMCONST(int i) {
			return getToken(SimpleLangParser.NUMCONST, i);
		}
		public List<TerminalNode> CHARCONST() { return getTokens(SimpleLangParser.CHARCONST); }
		public TerminalNode CHARCONST(int i) {
			return getToken(SimpleLangParser.CHARCONST, i);
		}
		public List<TerminalNode> BOOLEANCONST() { return getTokens(SimpleLangParser.BOOLEANCONST); }
		public TerminalNode BOOLEANCONST(int i) {
			return getToken(SimpleLangParser.BOOLEANCONST, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleLangParser.COMMA, i);
		}
		public ConstdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).enterConstdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).exitConstdecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLangVisitor ) return ((SimpleLangVisitor<? extends T>)visitor).visitConstdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstdeclContext constdecl() throws RecognitionException {
		ConstdeclContext _localctx = new ConstdeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constdecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(CONST);
			setState(71);
			type();
			setState(72);
			match(IDENT);
			setState(73);
			match(ASS);
			setState(74);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMCONST) | (1L << CHARCONST) | (1L << BOOLEANCONST))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(75);
				match(COMMA);
				setState(76);
				match(IDENT);
				setState(77);
				match(ASS);
				setState(78);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMCONST) | (1L << CHARCONST) | (1L << BOOLEANCONST))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumdeclContext extends ParserRuleContext {
		public TerminalNode ENUM() { return getToken(SimpleLangParser.ENUM, 0); }
		public List<TerminalNode> IDENT() { return getTokens(SimpleLangParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(SimpleLangParser.IDENT, i);
		}
		public TerminalNode LCUR() { return getToken(SimpleLangParser.LCUR, 0); }
		public TerminalNode RCUR() { return getToken(SimpleLangParser.RCUR, 0); }
		public List<TerminalNode> ASS() { return getTokens(SimpleLangParser.ASS); }
		public TerminalNode ASS(int i) {
			return getToken(SimpleLangParser.ASS, i);
		}
		public List<TerminalNode> NUMCONST() { return getTokens(SimpleLangParser.NUMCONST); }
		public TerminalNode NUMCONST(int i) {
			return getToken(SimpleLangParser.NUMCONST, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleLangParser.COMMA, i);
		}
		public EnumdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).enterEnumdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).exitEnumdecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLangVisitor ) return ((SimpleLangVisitor<? extends T>)visitor).visitEnumdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnumdeclContext enumdecl() throws RecognitionException {
		EnumdeclContext _localctx = new EnumdeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_enumdecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ENUM);
			setState(87);
			match(IDENT);
			setState(88);
			match(LCUR);
			setState(89);
			match(IDENT);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ASS) {
				{
				{
				setState(90);
				match(ASS);
				setState(91);
				match(NUMCONST);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(97);
				match(COMMA);
				setState(98);
				match(IDENT);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ASS) {
					{
					{
					setState(99);
					match(ASS);
					setState(100);
					match(NUMCONST);
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RCUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> IDENT() { return getTokens(SimpleLangParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(SimpleLangParser.IDENT, i);
		}
		public TerminalNode SEMICOLON() { return getToken(SimpleLangParser.SEMICOLON, 0); }
		public List<TerminalNode> LSQ() { return getTokens(SimpleLangParser.LSQ); }
		public TerminalNode LSQ(int i) {
			return getToken(SimpleLangParser.LSQ, i);
		}
		public List<TerminalNode> RSQ() { return getTokens(SimpleLangParser.RSQ); }
		public TerminalNode RSQ(int i) {
			return getToken(SimpleLangParser.RSQ, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleLangParser.COMMA, i);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).enterVardecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).exitVardecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLangVisitor ) return ((SimpleLangVisitor<? extends T>)visitor).visitVardecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			type();
			setState(114);
			match(IDENT);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LSQ) {
				{
				{
				setState(115);
				match(LSQ);
				setState(116);
				match(RSQ);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(122);
				match(COMMA);
				setState(123);
				match(IDENT);
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==LSQ) {
					{
					{
					setState(124);
					match(LSQ);
					setState(125);
					match(RSQ);
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(SimpleLangParser.CLASS, 0); }
		public TerminalNode IDENT() { return getToken(SimpleLangParser.IDENT, 0); }
		public List<TerminalNode> LCUR() { return getTokens(SimpleLangParser.LCUR); }
		public TerminalNode LCUR(int i) {
			return getToken(SimpleLangParser.LCUR, i);
		}
		public List<TerminalNode> RCUR() { return getTokens(SimpleLangParser.RCUR); }
		public TerminalNode RCUR(int i) {
			return getToken(SimpleLangParser.RCUR, i);
		}
		public TerminalNode EXTENDS() { return getToken(SimpleLangParser.EXTENDS, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode IMPLEMENTS() { return getToken(SimpleLangParser.IMPLEMENTS, 0); }
		public List<VardeclContext> vardecl() {
			return getRuleContexts(VardeclContext.class);
		}
		public VardeclContext vardecl(int i) {
			return getRuleContext(VardeclContext.class,i);
		}
		public List<MethoddeclContext> methoddecl() {
			return getRuleContexts(MethoddeclContext.class);
		}
		public MethoddeclContext methoddecl(int i) {
			return getRuleContext(MethoddeclContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleLangParser.COMMA, i);
		}
		public ClassdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).enterClassdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).exitClassdecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLangVisitor ) return ((SimpleLangVisitor<? extends T>)visitor).visitClassdecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassdeclContext classdecl() throws RecognitionException {
		ClassdeclContext _localctx = new ClassdeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classdecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(CLASS);
			setState(139);
			match(IDENT);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(140);
				match(EXTENDS);
				setState(141);
				type();
				}
			}

			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPLEMENTS) {
				{
				setState(144);
				match(IMPLEMENTS);
				setState(145);
				type();
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(146);
					match(COMMA);
					setState(147);
					type();
					}
					}
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(155);
			match(LCUR);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(156);
				vardecl();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(162);
			match(LCUR);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VOID || _la==IDENT) {
				{
				{
				setState(163);
				methoddecl();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(RCUR);
			}
			setState(171);
			match(RCUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfacedeclContext extends ParserRuleContext {
		public TerminalNode INTERFACE() { return getToken(SimpleLangParser.INTERFACE, 0); }
		public TerminalNode IDENT() { return getToken(SimpleLangParser.IDENT, 0); }
		public TerminalNode LCUR() { return getToken(SimpleLangParser.LCUR, 0); }
		public TerminalNode RCUR() { return getToken(SimpleLangParser.RCUR, 0); }
		public List<InterfacemethoddeclContext> interfacemethoddecl() {
			return getRuleContexts(InterfacemethoddeclContext.class);
		}
		public InterfacemethoddeclContext interfacemethoddecl(int i) {
			return getRuleContext(InterfacemethoddeclContext.class,i);
		}
		public InterfacedeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfacedecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).enterInterfacedecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).exitInterfacedecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLangVisitor ) return ((SimpleLangVisitor<? extends T>)visitor).visitInterfacedecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfacedeclContext interfacedecl() throws RecognitionException {
		InterfacedeclContext _localctx = new InterfacedeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interfacedecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(INTERFACE);
			setState(174);
			match(IDENT);
			setState(175);
			match(LCUR);
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VOID || _la==IDENT) {
				{
				{
				setState(176);
				interfacemethoddecl();
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			match(RCUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfacemethoddeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(SimpleLangParser.IDENT, 0); }
		public TerminalNode LPAREN() { return getToken(SimpleLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SimpleLangParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(SimpleLangParser.SEMICOLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(SimpleLangParser.VOID, 0); }
		public List<FormparsContext> formpars() {
			return getRuleContexts(FormparsContext.class);
		}
		public FormparsContext formpars(int i) {
			return getRuleContext(FormparsContext.class,i);
		}
		public InterfacemethoddeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfacemethoddecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).enterInterfacemethoddecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLangListener ) ((SimpleLangListener)listener).exitInterfacemethoddecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLangVisitor ) return ((SimpleLangVisitor<? extends T>)visitor).visitInterfacemethoddecl(this);
			else return visitor.visitChildren(this);
		}
	}
